Update colors_combined dictionary returned from mapping_color_labels into stacked_bar_chart_generic() as a new args.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -80,7 +80,7 @@
    "id": "796f59c7",
    "metadata": {},
    "source": [
-    "### Color Mapping for labels"
+    "### Color Dictionary"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors_mode, colors_purpose = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
+    "colors_combined = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
    ]
   },
   {
@@ -198,9 +198,10 @@
     "            print(\"df_sensed_tc is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty\")\n",
+    "    print(\"Hello\")\n",
     "\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
@@ -270,7 +271,7 @@
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
     "    result_df_u80 = merge_dataframes(all_data_frames_u80)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df_u80[result_df_u80['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -315,7 +316,7 @@
     "\n",
     "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
     "\n",
-    "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name,colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -382,7 +383,7 @@
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -433,7 +434,7 @@
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -475,7 +476,7 @@
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
