--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -93,7 +93,7 @@
    "id": "397709c8",
    "metadata": {},
    "source": [
-    "### Color Mapping for labels"
+    "### Color Dictionary"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors_mode, colors_purpose = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
+    "colors_combined = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
    ]
   },
   {
@@ -212,7 +212,7 @@
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -271,7 +271,7 @@
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -313,7 +313,7 @@
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
