Change from stacked_bar_chart_generic to plot_stacked_bar_chart().

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -198,11 +198,9 @@
     "            print(\"df_sensed_tc is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty\")\n",
-    "    print(\"Hello\")\n",
     "\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
+    "    plot_stacked_bar_chart([df_confirmed_tc, df_sensed_tc], colors_combined, bar_count, plot_title, file_name)\n",
+    "#     alt_text, alt_html = store_alt_text_stacked_bar_chart(all_data_frames, file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -269,10 +267,9 @@
     "            print(\"df_sensed_tc_u80 is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
-    "\n",
-    "    result_df_u80 = merge_dataframes(all_data_frames_u80)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df_u80[result_df_u80['Count'] > 0], file_name, plot_title)\n",
+    "    \n",
+    "    plot_stacked_bar_chart([df_confirmed_tc_u80, df_sensed_tc_u80], colors_combined, bar_count, plot_title, file_name)\n",
+    "#     alt_text, alt_html = store_alt_text_stacked_bar_chart(all_data_frames_u80[all_data_frames_u80['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -316,8 +313,8 @@
     "\n",
     "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
     "\n",
-    "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name,colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
+    "    plot_stacked_bar_chart([df_total_trip_commute], colors_combined, bar_count, plot_title, file_name)\n",
+    "#     alt_text, alt_html = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -382,9 +379,8 @@
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "    plot_stacked_bar_chart([df_confirm_dist, df_sensed_dist], colors_combined, bar_count, plot_title, file_name)\n",
+    "#     alt_text, alt_html = store_alt_text_stacked_bar_chart(all_data_frames[all_data_frames['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -433,9 +429,8 @@
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "    plot_stacked_bar_chart([df_confirm_dist_land, df_sensed_dist_land], colors_combined, bar_count, plot_title, file_name)\n",
+    "#     alt_text, alt_html = store_alt_text_stacked_bar_chart(all_data_frames[all_data_frames['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -475,9 +470,8 @@
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
-    "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
+    "    plot_stacked_bar_chart([df_purpose_trip], colors_combined, bar_count, plot_title, file_name)\n",
+    "#     alt_text, alt_html = store_alt_text_stacked_bar_chart(all_tp_data_frames[all_tp_data_frames['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
