Change from stacked_bar_chart_generic to plot_stacked_bar_chart() for mode_specific_metrics notebook.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -211,9 +211,8 @@
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
+    "    plot_stacked_bar_chart([df_purpose_trip_eb], colors_combined, bar_count, plot_title, file_name)\n",
+    "    # alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -270,9 +269,8 @@
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "    plot_stacked_bar_chart([df_replaced_dist], colors_combined, bar_count, plot_title, file_name)\n",
+    "    # alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -312,9 +310,8 @@
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    result_df = merge_dataframes(all_data_frames)\n",
-    "    stacked_bar_chart_generic(plot_title, result_df, file_name, colors_combined, bar_count)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
+    "    plot_stacked_bar_chart([df_replaced_tc], colors_combined, bar_count, plot_title, file_name)\n",
+    "    # alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
