Fix alt html function call for mode_specific_metrics notebook.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -212,7 +212,8 @@
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart([df_purpose_trip_eb], colors_combined, bar_count, plot_title, file_name)\n",
-    "    # alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
+    "    result_df = pd.concat(all_tp_data_frames, ignore_index=True)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -270,7 +271,8 @@
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart([df_replaced_dist], colors_combined, bar_count, plot_title, file_name)\n",
-    "    # alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -311,7 +313,8 @@
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart([df_replaced_tc], colors_combined, bar_count, plot_title, file_name)\n",
-    "    # alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
+    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
