1. Initilize all_data_frames_commute for commute metrics. 2. Update to use all_data_frames instead of list of individual df.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -199,7 +199,7 @@
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty\")\n",
     "\n",
-    "    plot_stacked_bar_chart([df_confirmed_tc, df_sensed_tc], colors_combined, bar_count, plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
@@ -269,7 +269,7 @@
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart([df_confirmed_tc_u80, df_sensed_tc_u80], colors_combined, bar_count, plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(all_data_frames_u80, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames_u80, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(all_data_frames_u80, file_name, plot_title)\n",
     "except:\n",
@@ -297,6 +297,7 @@
     "\n",
     "try:\n",
     "    bar_count = 0\n",
+    "    all_data_frames_commute = []\n",
     "    plot_title = plot_title_no_quality\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
@@ -314,9 +315,11 @@
     "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "\n",
     "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    all_data_frames_commute.append(df_total_trip_commute)\n",
     "\n",
-    "    plot_stacked_bar_chart([df_total_trip_commute], colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    plot_stacked_bar_chart(all_data_frames_commute, colors_combined, bar_count, plot_title, file_name)\n",
+    "    # Maintain this style as other metric stacked bar charts\n",
+    "    result_df = pd.concat(all_data_frames_commute, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -382,7 +385,7 @@
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart([df_confirm_dist, df_sensed_dist], colors_combined, bar_count, plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -433,7 +436,7 @@
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart([df_confirm_dist_land, df_sensed_dist_land], colors_combined, bar_count, plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -475,7 +478,7 @@
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart([df_purpose_trip], colors_combined, bar_count, plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(all_tp_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
