1. Update to use all_data_frames instead of list of individual df for mode_specific_metrics notebook.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -211,7 +211,7 @@
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart([df_purpose_trip_eb], colors_combined, bar_count, plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(all_tp_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_tp_data_frames, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -270,7 +270,7 @@
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart([df_replaced_dist], colors_combined, bar_count, plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
@@ -312,7 +312,7 @@
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
-    "    plot_stacked_bar_chart([df_replaced_tc], colors_combined, bar_count, plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(all_data_frames], colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
