Fix for alt_html u80 metric chart in generic_metrics notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -271,7 +271,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_data_frames_u80, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames_u80, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(all_data_frames_u80, file_name, plot_title)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
