Only return and store alt_html. alt_txt removed.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -201,7 +201,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -271,7 +271,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_data_frames_u80, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames_u80, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -320,7 +320,7 @@
     "    plot_stacked_bar_chart(all_data_frames_commute, colors_combined, bar_count, plot_title, file_name)\n",
     "    # Maintain this style as other metric stacked bar charts\n",
     "    result_df = pd.concat(all_data_frames_commute, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -387,7 +387,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -438,7 +438,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -480,7 +480,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_tp_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
