--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -213,7 +213,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_tp_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_tp_data_frames, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -272,7 +272,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -314,7 +314,7 @@
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
     "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
-    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
+    "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
