Use expanded dataframe to create alt_html.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -198,21 +198,23 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_tp_data_frames = []\n",
+    "    all_tp_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not data_eb.empty:\n",
-    "        df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
+    "        df_purpose_trip_eb_expanded, df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
     "        if not df_purpose_trip_eb.empty:\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "            bar_count += 1\n",
     "            all_tp_data_frames.append(df_purpose_trip_eb)\n",
+    "            all_tp_data_frames_expanded.append(df_purpose_trip_eb_expanded)\n",
     "        else:\n",
     "            print(\"df_purpose_trip_eb is empty.\")\n",
     "    else:\n",
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart(all_tp_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_tp_data_frames, ignore_index=True)\n",
+    "    result_df = pd.concat(all_tp_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -256,14 +258,16 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
+    "    all_data_frames_expanded = []\n",
     "\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not data_eb.empty:\n",
-    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "        df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
     "        if not df_replaced_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_replaced_dist)\n",
+    "            all_data_frames_expanded.append(df_replaced_dist_expanded)\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "        else:\n",
     "            print(\"df_replaced_dist is empty.\")\n",
@@ -271,7 +275,7 @@
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -299,13 +303,15 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
+    "    all_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not data_eb.empty:\n",
-    "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
-    "        all_data_frames.append(df_replaced_tc)\n",
+    "        df_replaced_tc_expanded, df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
     "        if not df_replaced_tc.empty:\n",
     "            bar_count += 1\n",
+    "            all_data_frames.append(df_replaced_tc)\n",
+    "            all_data_frames_expanded.append(df_replaced_tc_expanded)\n",
     "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "        else:\n",
     "            print(\"df_replaced_tc is empty.\")\n",
@@ -313,7 +319,7 @@
     "        print(\"data_eb is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
