--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -177,30 +177,33 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
+    "    all_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "        df_confirmed_tc_expanded, df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        if not df_confirmed_tc.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirmed_tc)\n",
+    "            all_data_frames_expanded.append(df_confirmed_tc_expanded)\n",
     "        else:\n",
     "            print(\"df_confirmed_tc is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "        df_sensed_tc_expanded, df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "        if not df_sensed_tc.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_tc)\n",
+    "            all_data_frames_expanded.append(df_sensed_tc_expanded)\n",
     "        else:\n",
     "            print(\"df_sensed_tc is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty\")\n",
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)  \n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,merged_debug_df,file_name)\n",
@@ -233,9 +236,9 @@
     "\n",
     "    labels = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).keys().tolist()\n",
     "    values = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).tolist()\n",
-    "    processed_data = process_trip_data(labels, values, trip_type)    \n",
+    "    processed_data_expanded, processed_data = process_trip_data(labels, values, trip_type)\n",
     "\n",
-    "    return processed_data,cutoff, dist_threshold\n",
+    "    return processed_data_expanded, processed_data, cutoff, dist_threshold\n",
     "\n",
     "plot_title_no_quality= \"Number of trips for 80th percentile for each mode (selected by users):\"\n",
     "file_name = f'ntrips_under80{file_suffix}'\n",
@@ -243,34 +246,37 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames_u80 = []\n",
+    "    all_data_frames_u80_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "        df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "        if not df_confirmed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_confirmed_tc_u80)\n",
+    "            all_data_frames_u80_expanded.append(df_confirmed_tc_u80_expanded)\n",
     "        else:\n",
     "            print(\"df_confirmed_tc_u80 is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "        df_sensed_tc_u80_expanded, df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "        u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
     "        if not df_sensed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_sensed_tc_u80)\n",
+    "            all_data_frames_u80_expanded.append(df_sensed_tc_u80_expanded)\n",
     "        else:\n",
     "            print(\"df_sensed_tc_u80 is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart(all_data_frames_u80, colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_data_frames_u80, ignore_index=True)\n",
+    "    result_df = pd.concat(all_data_frames_u80_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -298,6 +304,7 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames_commute = []\n",
+    "    all_data_frames_commute_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
@@ -314,12 +321,13 @@
     "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "\n",
-    "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    df_total_trip_commute_expanded, df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
     "    all_data_frames_commute.append(df_total_trip_commute)\n",
+    "    all_data_frames_commute_expanded.append(df_total_trip_commute_expanded)\n",
     "\n",
     "    plot_stacked_bar_chart(all_data_frames_commute, colors_combined, bar_count, plot_title, file_name)\n",
     "    # Maintain this style as other metric stacked bar charts\n",
-    "    result_df = pd.concat(all_data_frames_commute, ignore_index=True)\n",
+    "    result_df = pd.concat(all_data_frames_commute_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
@@ -363,30 +371,33 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
+    "    all_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Trip distance)\")\n",
+    "        df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Trip distance)\")\n",
     "        if not df_confirm_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirm_dist)\n",
+    "            all_data_frames_expanded.append(df_confirm_dist_expanded)\n",
     "        else:\n",
     "            print(\"df_confirm_dist is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
+    "        df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
     "        if not df_sensed_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist)\n",
+    "            all_data_frames_expanded.append(df_sensed_dist_expanded)\n",
     "        else:\n",
     "            print(\"df_sensed_dist is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -414,30 +425,33 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
+    "    all_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm', \"Labeled by user\\n (Trip distance - Land)\")\n",
+    "        df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm', \"Labeled by user\\n (Trip distance - Land)\")\n",
     "        if not df_confirm_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirm_dist_land)\n",
+    "            all_data_frames_expanded.append(df_confirm_dist_land_expanded)\n",
     "        else:\n",
     "            print(\"df_confirm_dist_land is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
+    "        df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "        if not df_sensed_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist_land)\n",
+    "            all_data_frames_expanded.append(df_sensed_dist_land_expanded)\n",
     "        else:\n",
     "            print(\"df_sensed_dist_land is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart(all_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    result_df = pd.concat(all_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
@@ -465,21 +479,23 @@
     "try:\n",
     "    bar_count = 0\n",
     "    all_tp_data_frames = []\n",
+    "    all_tp_data_frames_expanded = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "        df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
     "        if not df_purpose_trip.empty:\n",
     "            plot_title += \"\\n\" + \"For Labeled: \" + quality_text\n",
     "            bar_count += 1\n",
     "            all_tp_data_frames.append(df_purpose_trip)\n",
+    "            all_tp_data_frames_expanded.append(df_purpose_trip_expanded)\n",
     "        else:\n",
     "            print(\"df_purpose_trip is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    plot_stacked_bar_chart(all_tp_data_frames, colors_combined, bar_count, plot_title, file_name)\n",
-    "    result_df = pd.concat(all_data_frames, ignore_index=True)\n",
+    "    result_df = pd.concat(all_tp_data_frames_expanded, ignore_index=True)\n",
     "    alt_html = store_alt_text_stacked_bar_chart(result_df, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
