Update file names for mode_specific_metrics Stacked Bar Chart files.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -253,7 +253,7 @@
     "    return process_trip_data(labels_dist, values_dist, trip_type)\n",
     "\n",
     "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by replaced mode\"\n",
-    "file_name = f\"total_trip_length_replaced_mode{file_suffix}\"\n",
+    "file_name = f\"total_trip_length_{mode_of_interest}_replaced_mode{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
@@ -298,7 +298,7 @@
    "outputs": [],
    "source": [
     "plot_title_no_quality= \"Number of trips for replaced mode\"\n",
-    "file_name = f'ntrips_total_replaced_mode{file_suffix}'\n",
+    "file_name = f'ntrips_{mode_of_interest}_total{file_suffix}'\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
