1. Remove mode_of_interest from generic_metrics notebook. 2. Split merged_debug_df into another code block.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -28,8 +28,7 @@
     "year = 2020\n",
     "month = 11\n",
     "program = \"default\"\n",
-    "study_type = \"program\"\n",
-    "mode_of_interest = \"e-bike\"\n",
+    "study_type = \"study\"\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
     "use_imperial = False\n",
@@ -137,8 +136,16 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            include_test_users,\n",
-    "                                                                            sensed_algo_prefix)\n",
-    "\n",
+    "                                                                            sensed_algo_prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ecfd343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a combined debug df from Generic and Sensed Metrics\n",
     "merged_debug_df = debug_df.combine_first(debug_df_sensed)"
    ]
