Update changes for ntrips_mode_of_interest_purpose metric.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -193,7 +193,7 @@
     "    return process_trip_data(labels, values, trip_type)\n",
     "\n",
     "plot_title_no_quality = f\"Number of trips for each purpose for {mode_of_interest}\"\n",
-    "file_name= f\"ntrips_{mode_of_interest}_purpose%s{file_suffix}\"\n",
+    "file_name= f\"ntrips_{mode_of_interest}_purpose{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
