Shift process_data_frame(), process_distance_data(), process_data_for_cutoff() to plots.py.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -187,11 +187,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_data_frame(df, df_col, trip_type):\n",
-    "    labels = df[df_col].value_counts(dropna=True).keys().tolist()\n",
-    "    values = df[df_col].value_counts(dropna=True).tolist()\n",
-    "    return process_trip_data(labels, values, trip_type)\n",
-    "\n",
     "plot_title_no_quality = f\"Number of trips for each purpose for {mode_of_interest}\"\n",
     "file_name= f\"ntrips_{mode_of_interest}_purpose{file_suffix}\"\n",
     "\n",
@@ -236,22 +231,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_distance_data(df, df_col, trip_type):\n",
-    "    dist = df.groupby(df_col).agg({distance_col: ['sum', 'count', 'mean']})\n",
-    "    dist.columns = ['Total (' + label_units_lower + ')', 'Count', 'Average (' + label_units_lower + ')']\n",
-    "    dist = dist.reset_index()\n",
-    "    dist = dist.sort_values(by=['Total (' + label_units_lower + ')'], ascending=False)\n",
-    "\n",
-    "    dist_dict = dict(zip(dist[df_col], dist['Total (' + label_units_lower + ')']))\n",
-    "    labels_dist = []\n",
-    "    values_dist = []\n",
-    "\n",
-    "    for x, y in dist_dict.items():\n",
-    "        labels_dist.append(x)\n",
-    "        values_dist.append(y)\n",
-    "\n",
-    "    return process_trip_data(labels_dist, values_dist, trip_type)\n",
-    "\n",
     "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by replaced mode\"\n",
     "file_name = f\"total_trip_length_{mode_of_interest}_replaced_mode{file_suffix}\"\n",
     "\n",
@@ -263,7 +242,7 @@
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not data_eb.empty:\n",
-    "        df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "        df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
     "        if not df_replaced_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_replaced_dist)\n",
