--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -173,11 +173,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_data_frame(df, df_col, trip_type):\n",
-    "    labels = df[df_col].value_counts(dropna=True).keys().tolist()\n",
-    "    values = df[df_col].value_counts(dropna=True).tolist()\n",
-    "    return process_trip_data(labels, values, trip_type)\n",
-    "\n",
     "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
     "file_name = f'ntrips_total{file_suffix}'\n",
     "\n",
@@ -232,21 +227,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_data_for_cutoff(df, df_col, trip_type):\n",
-    "\n",
-    "    cutoff = df.distance.quantile(0.8)\n",
-    "    if pd.isna(cutoff):\n",
-    "        cutoff = 0\n",
-    "\n",
-    "    dist_threshold = df[distance_col].quantile(0.8).round(1)\n",
-    "    dist_threshold = str(dist_threshold)\n",
-    "\n",
-    "    labels = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).keys().tolist()\n",
-    "    values = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).tolist()\n",
-    "    processed_data_expanded, processed_data = process_trip_data(labels, values, trip_type)\n",
-    "\n",
-    "    return processed_data_expanded, processed_data, cutoff, dist_threshold\n",
-    "\n",
     "plot_title_no_quality= \"Number of trips for 80th percentile for each mode (selected by users):\"\n",
     "file_name = f'ntrips_under80{file_suffix}'\n",
     "\n",
@@ -257,7 +237,7 @@
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "        df_confirmed_tc_u80_expanded, df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct,'Mode_confirm', distance_col, \"Labeled by user\\n (Confirmed trips)\")\n",
     "        u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
     "        if not df_confirmed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
@@ -270,7 +250,7 @@
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_tc_u80_expanded, df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "        df_sensed_tc_u80_expanded, df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', distance_col, \"Sensed by OpenPATH\\n (Total trips)\")\n",
     "        u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
     "        if not df_sensed_tc_u80.empty:\n",
     "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
@@ -356,22 +336,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_distance_data(df, df_col, trip_type):\n",
-    "    dist = df.groupby(df_col).agg({distance_col: ['sum', 'count', 'mean']})\n",
-    "    dist.columns = ['Total (' + label_units_lower + ')', 'Count', 'Average (' + label_units_lower + ')']\n",
-    "    dist = dist.reset_index()\n",
-    "    dist = dist.sort_values(by=['Total (' + label_units_lower + ')'], ascending=False)\n",
-    "\n",
-    "    dist_dict = dict(zip(dist[df_col], dist['Total (' + label_units_lower + ')']))\n",
-    "    labels_dist = []\n",
-    "    values_dist = []\n",
-    "\n",
-    "    for x, y in dist_dict.items():\n",
-    "        labels_dist.append(x)\n",
-    "        values_dist.append(y)\n",
-    "\n",
-    "    return process_trip_data(labels_dist, values_dist, trip_type)\n",
-    "\n",
     "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by each mode\"\n",
     "file_name = f\"total_trip_length{file_suffix}\"\n",
     "\n",
@@ -382,7 +346,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Trip distance)\")\n",
+    "        df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower, \"Labeled by user\\n (Trip distance)\")\n",
     "        if not df_confirm_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirm_dist)\n",
@@ -393,7 +357,7 @@
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
+    "        df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
     "        if not df_sensed_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist)\n",
@@ -436,7 +400,7 @@
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm', \"Labeled by user\\n (Trip distance - Land)\")\n",
+    "        df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm',distance_col, label_units_lower, \"Labeled by user\\n (Trip distance - Land)\")\n",
     "        if not df_confirm_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirm_dist_land)\n",
@@ -447,7 +411,7 @@
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
+    "        df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode',distance_col, label_units_lower, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "        if not df_sensed_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist_land)\n",
